@@ -2,3 +2,7 @@
 
 	* AttributeUtil.cs: 
 
+2010-07-01  Jared L Jennings  <jaredljennings@gmail.com>
+
+	* AttributeUtil.cs: 
+
