@@ -1,3 +1,8 @@
+2010-07-01  Jared L Jennings  <jaredljennings@gmail.com>
+
+	* sharpnldap.pidb:
+	* sharpnldap.userprefs: 
+
 2010-06-26  Jared L Jennings  <jaredljennings@gmail.com>
 
 	* sharpnldap.sln:
